--- a/app/assets/stylesheets/plasma_donors.scss
+++ b/app/assets/stylesheets/plasma_donors.scss
@@ -7,3 +7,20 @@
   max-width: 800px;
   margin: 36px auto;
 }
+
+#page-plasma-donor-index {
+
+  .table-container {
+    margin-top: 36px;
+    max-width: 100%;
+    overflow-x: auto;
+
+    table {
+      tr {
+        td {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
