--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -50,7 +50,7 @@
   <section class="volunteer-reg-link">
     <h5>
       If you can bring in more contacts or can help us verify the contacts being received, please
-      <%= link_to 'click here to join as a volunteer', new_volunteer_path, target: '_blank' %>
+      <%= link_to 'click here to join as a volunteer from home', new_volunteer_path, target: '_blank' %>
     </h5>
   </section>
 
