--- a/app/views/hospital_beds/edit.html.erb
+++ b/app/views/hospital_beds/edit.html.erb
@@ -1,6 +1,4 @@
-
-
-<div id="#page-new-hospital-beds">
+<div id="page-edit-hospital-beds">
   <h1>Editing Hospital Bed</h1>
 
   <%= render 'form', hospital_bed: @hospital_bed %>
