--- a/app/views/hospital_beds/new.html.erb
+++ b/app/views/hospital_beds/new.html.erb
@@ -1,4 +1,4 @@
-<div id="#page-edit-hospital-beds">
+<div id="page-new-hospital-beds">
   <h1>
     Share Information About Available Hospital Beds
   </h1>
