--- a/app/views/plasma_donors/edit.html.erb
+++ b/app/views/plasma_donors/edit.html.erb
@@ -1,4 +1,4 @@
-<div id="page-edit-hospita-beds">
+<div id="page-edit-plasma-donor">
   <h1>Editing Plasma Donor</h1>
 
   <%= render 'form', plasma_donor: @plasma_donor %>
