--- a/app/assets/stylesheets/oxygen_suppliers.scss
+++ b/app/assets/stylesheets/oxygen_suppliers.scss
@@ -6,3 +6,20 @@
   max-width: 800px;
   margin: 24px auto;
 }
+
+#page-oxygen-suppliers-index {
+
+  .table-container {
+    margin-top: 36px;
+    max-width: 100%;
+    overflow-x: auto;
+
+    table {
+      tr {
+        td {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
