--- a/app/views/oxygen_suppliers/index.html.erb
+++ b/app/views/oxygen_suppliers/index.html.erb
@@ -1,41 +1,81 @@
-<p id="notice"><%= notice %></p>
+<div id="page-oxygen-suppliers-index">
+  <p id="notice"><%= notice %></p>
 
-<h1>Oxygen Suppliers</h1>
+  <h1>Oxygen Suppliers</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Phone</th>
-      <th>Alternate phone</th>
-      <th>City</th>
-      <th>Unavailable</th>
-      <th>Fake</th>
-      <th>Old</th>
-      <th>Last verified at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div>
 
-  <tbody>
-    <% @oxygen_suppliers.each do |oxygen_supplier| %>
-      <tr>
-        <td><%= oxygen_supplier.name %></td>
-        <td><%= oxygen_supplier.phone %></td>
-        <td><%= oxygen_supplier.alternate_phone %></td>
-        <td><%= oxygen_supplier.city_id %></td>
-        <td><%= oxygen_supplier.unavailable %></td>
-        <td><%= oxygen_supplier.fake %></td>
-        <td><%= oxygen_supplier.old %></td>
-        <td><%= oxygen_supplier.last_verified_at %></td>
-        <td><%= link_to 'Show', oxygen_supplier %></td>
-        <td><%= link_to 'Edit', edit_oxygen_supplier_path(oxygen_supplier) %></td>
-        <td><%= link_to 'Destroy', oxygen_supplier, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <h4>
+      <%= link_to 'Click Here', new_oxygen_supplier_path, class: 'btn btn-lg btn-primary' %>
+      to share any information about oxygen suppliers.
+    </h4>
+  </div>
+
+  <div>
+    <button onClick="window.location.reload();" class="btn btn-outline-secondary btn-sm">
+      <i class="fas fa-redo"></i>
+      Refresh Page
+    </button>
+  </div>
+  <div class="table-container">
+    <table class="table table-hover">
+      <thead>
+      <tr class="table-primary">
+        <th scope="col">City</th>
+        <th scope="col">Time</th>
+        <th scope="col">Name</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Alternate phone</th>
+        <% if user_signed_in? %>
+        <th scope="col">Unavailable</th>
+        <th scope="col">Fake</th>
+        <th scope="col">Old</th>
+        <th scope="col">Last verified at</th>
+        <th colspan="3"></th>
+        <% end %>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
 
-<br>
+      <tbody>
+      <% @oxygen_suppliers.each do |oxygen_supplier| %>
+        <tr>
+          <td><%= oxygen_supplier.city.name %>, <%= oxygen_supplier.city.state %></td>
+          <td>
+            <% if oxygen_supplier.last_verified_at %>
+              ✅ Verified: <%= time_ago_in_words(oxygen_supplier.last_verified_at) %>
+              <br/>
+              <br/>
+            <% end %>
 
-<%= link_to 'New Oxygen Supplier', new_oxygen_supplier_path %>
+            Submitted: <%= time_ago_in_words(oxygen_supplier.updated_at) %>
+          </td>
+          <td><%= oxygen_supplier.name %></td>
+          <td><%= oxygen_supplier.phone %></td>
+          <td><%= oxygen_supplier.alternate_phone %></td>
+          <% if user_signed_in? %>
+
+          <td><%= oxygen_supplier.unavailable %></td>
+          <td><%= oxygen_supplier.fake %></td>
+          <td><%= oxygen_supplier.old %></td>
+          <td><%= link_to 'Show', oxygen_supplier %></td>
+          <td><%= link_to 'Edit', edit_oxygen_supplier_path(oxygen_supplier) %></td>
+          <td><%= link_to 'Destroy', oxygen_supplier, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
+
+
+  <br>
+
+  <div>
+
+    <h6>
+      <%= link_to 'Click Here', new_oxygen_supplier_path, class: 'btn btn-md btn-primary' %>
+      to share any information about oxygen suppliers.
+    </h6>
+  </div>
+
+</div>
