--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,12 @@ form {
 input[type="checkbox"] {
   font-size: 24px;
 }
+
+
+.social-share-button {
+  .ssb-icon {
+    background-size: 28px 28px;
+    height: 28px;
+    width: 28px;
+  }
+}
