--- a/app/assets/stylesheets/plasma_donors.scss
+++ b/app/assets/stylesheets/plasma_donors.scss
@@ -15,6 +15,14 @@
     max-width: 100%;
     overflow-x: auto;
 
+    .select-city {
+      width: 300px;
+      margin-bottom: 12px;
+      padding: 12px;
+      border: 1px solid;
+      border-radius: 5px;
+    }
+
     table {
       tr {
         td {
