fix active method, create new one for getting a list

--- a/app/views/oxygen_suppliers/_form.html.erb
+++ b/app/views/oxygen_suppliers/_form.html.erb
@@ -34,7 +34,7 @@
   <% if !oxygen_supplier.persisted? %>
     <div class="field d-flex flex-column-reverse">
       <%= form.label :disclaimer, class: 'form-label' do %>
-        I hereby agree to the Terms and Conditions of sharing this data to the best of my knowledge to help the people who need it.
+        I hereby agree to the Terms and Conditions of sharing this data publicly on this website to the best of my knowledge to help the people who need it.
       <% end %>
       <%= form.check_box :disclaimer, required: true %>
 
