--- a/app/views/plasma_donors/_form.html.erb
+++ b/app/views/plasma_donors/_form.html.erb
@@ -62,7 +62,7 @@
   <% if !plasma_donor.persisted? %>
     <div class="field d-flex flex-column-reverse">
       <%= form.label :disclaimer, class: 'form-label' do %>
-        I hereby agree to the Terms and Conditions of sharing this data to the best of my knowledge to help the people who need it.
+        I hereby agree to the Terms and Conditions of sharing this data publicly on this website  to the best of my knowledge to help the people who need it.
       <% end %>
       <%= form.check_box :disclaimer, required: true %>
 
