--- a/app/views/volunteers/new.html.erb
+++ b/app/views/volunteers/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New Volunteer</h1>
-
+<h1>Apply to Volunteer</h1>
+<p>
+  We are very grateful that you want to take out time and volunteer to help us out. Once you fill this form, we will get back to you as soon as we need help. Till then please keep referring this website to more people who need help.
+</p>
 <%= render 'form', volunteer: @volunteer %>
