--- a/app/views/hospital_beds/_form.html.erb
+++ b/app/views/hospital_beds/_form.html.erb
@@ -54,7 +54,7 @@
   <% if !hospital_bed.persisted? %>
   <div class="field d-flex flex-column-reverse">
     <%= form.label :disclaimer, class: 'form-label' do %>
-    I hereby agree to the Terms and Conditions of sharing this data to the best of my knowledge to help the people who need it.
+    I hereby agree to the Terms and Conditions of sharing this data publicly on this website to the best of my knowledge to help the people who need it.
     <% end %>
     <%= form.check_box :disclaimer, required: true %>
 
