--- a/app/views/volunteers/_form.html.erb
+++ b/app/views/volunteers/_form.html.erb
@@ -26,6 +26,13 @@
     <%= form.text_field :email, class: 'form-control', required: true %>
   </div>
 
+  <div class="field">
+    <%= form.label :city_id, 'City*', class: 'form-label' %>
+    <%= form.select :city_id, City.all.map{|city| ["#{city.name}, #{city.state}", city.id]}, {include_blank: 'Select'} ,{class: 'form-select city-select', required: true}%>
+
+  </div>
+
+
   <div class="actions">
     <%= form.submit 'Submit', class: 'btn btn-primary' %>
   </div>
