--- a/app/views/hospital_beds/index.html.erb
+++ b/app/views/hospital_beds/index.html.erb
@@ -1,8 +1,20 @@
+<% content_for :meta do %>
+  <title>
+    Hospitals With COVID-19 Beds
+  </title>
+  <meta name="og:title" content="Hospitals With COVID-19 Beds">
+  <meta name="description" content="List of hospitals with beds for COVID-19 Patients">
+  <meta name="twitter:title" content="Hospitals With COVID-19 Beds">
+  <meta name="twitter:description" content="List of hospitals with beds for COVID-19 Patients">
+<% end %>
+
 <div id="page-hospital-beds-index">
   <p id="notice"><%= notice %></p>
 
   <h1>Hospital Beds</h1>
-
+  <p>
+    List of hospitals with beds for COVID-19 Patients
+  </p>
   <div>
 
     <h4>
