--- a/app/views/plasma_donors/index.html.erb
+++ b/app/views/plasma_donors/index.html.erb
@@ -1,8 +1,20 @@
+<% content_for :meta do %>
+  <title>
+    List of COVID-19 Plasma Donors
+  </title>
+  <meta name="og:title" content="List of COVID-19 Plasma Donors">
+  <meta name="description" content="This is a list of people who want to volunteer for donating plasma for COVID-19">
+  <meta name="twitter:title" content="List of COVID-19 Plasma Donors">
+  <meta name="twitter:description" content="This is a list of people who want to volunteer for donating plasma for COVID-19">
+<% end %>
+
 <div id="page-plasma-donor-index">
   <p id="notice"><%= notice %></p>
 
   <h1>Plasma Donors</h1>
-
+  <p>
+    This is a list of people who want to volunteer for donating plasma for COVID-19
+  </p>
   <div>
 
     <h4>
