--- a/app/views/plasma_donors/new.html.erb
+++ b/app/views/plasma_donors/new.html.erb
@@ -1,7 +1,20 @@
+<% content_for :meta do %>
+  <title>
+    Add Yourself as COVID-19 Plasma Donor
+  </title>
+  <meta name="og:title" content="Add Yourself as COVID-19 Plasma Donor">
+  <meta name="description" content="Fill this form to add yourself as a plasma donor for COVID-19 patients">
+  <meta name="twitter:title" content="Add Yourself as COVID-19 Plasma Donor">
+  <meta name="twitter:description" content="Fill this form to add yourself as a plasma donor for COVID-19 patients">
+<% end %>
+
 <div id="page-new-plasma-donor">
   <h1>
-    Add Yourself as Plasma Donor
+    Add Yourself as COVID-19 Plasma Donor
   </h1>
+  <p>
+    Fill this form to add yourself as a plasma donor for COVID-19 patients
+  </p>
 
   <%= render 'form', plasma_donor: @plasma_donor %>
 
