--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,3 +30,10 @@ input[type="checkbox"] {
     width: 28px;
   }
 }
+
+
+a:hover {
+  color: unset;
+  background-color: white;
+  text-decoration: underline;
+}
