add repo link add policy link in footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,10 @@
 <footer class="footer mt-auto py-3 bg-light">
-  <div class="container">
-    <span class="text-muted">Place sticky footer content here.</span>
+  <div class="container d-flex justify-content-around">
+    <p>
+      <%= link_to "Declaration/Policy", policies_path %>
+    </p>
+    <p>
+      This is an open sourced project. <a href="https://github.com/arpansac/jaocorona" target="_blank">Click Here</a> for the code. Please contribute to make it better.
+    </p>
   </div>
 </footer>
