fix button width

--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -22,7 +22,7 @@
   </section>
 
 
-  <section class="main d-flex flex-wrap gap-3">
+  <section class="main d-flex flex-md-row flex-column align-items-stretch flex-fill gap-3">
     <%= button_to plasma_donors_path, class: 'btn btn-outline-primary btn-lg', method: :get do %>
       Find Plasma Donor
       <br/>
